@@ -26,7 +26,7 @@ RUN chmod 755 /usr/local/bin/docker-entrypoint
 
 RUN groupadd --gid 1000 {{ .BeatName }}
 
-RUN mkdir {{ $beatHome }}/data {{ $beatHome }}/logs && \
+RUN mkdir -p {{ $beatHome }}/data {{ $beatHome }}/logs && \
     chown -R root:{{ .BeatName }} {{ $beatHome }} && \
     find {{ $beatHome }} -type d -exec chmod 0750 {} \; && \
     find {{ $beatHome }} -type f -exec chmod 0640 {} \; && \
