@@ -10,15 +10,15 @@ download:
   # e.g /windows-x86.zip
   sourceURI: "https://artifacts.elastic.co/downloads/beats/"
   # path to the directory containing downloaded packages
-  target_directory: "/home/elastic/downloads"
+  target_directory: "${path.data}/downloads"
   # timeout for downloading package
   timeout: 30s
   # file path to a public key used for verifying downloaded artifacts
   # if not file is present agent will try to load public key from elastic.co website.
-  pgpfile: "/home/elastic/elastic.pgp"
+  pgpfile: "${path.data}/elastic.pgp"
   # install_path describes the location of installed packages/programs. It is also used
   # for reading program specifications.
-  install_path: "/home/elastic/install"
+  install_path: "${path.data}/install"
 
 process:
   # minimal port number for spawned processes
