@@ -15,7 +15,7 @@ var DefaultAgentFleetConfig []byte
 func init() {
 	// Packed File
 	// _meta/agent.fleet.yml
-	unpacked := packer.MustUnpack("eJyMld2OozgWx+/3MfoBZvkoWs1KcxGnCmM60Buo2Ng3K2ynDImdoEmAwGrffWVIpapnZldzEUUCcz7+53f+/veXf5n9tfp7pfan6y9ver+//jIa/eUfX9DkhP98/Ws/9CI1N3ikZFB/9ZvHb3s+oJdE0zKfENQTglnPDWuZj0dGtkqS4MhKpHJz06zcXlCse1mAAyVPikFsKhJoBN1e+FslPOxIqDvmp9/RCIww4RXF+ZkVYFORpObmReHdsUPRRwxZgiMtc23PVWWqmNEXVgCHj+DAvcBURLrC7JSEtUZxpmWct9zIyZ6n5dbmqe17bkIHxZkrYtCLU67ZGjT7AkAOsZbrp++cRB0lUnOCO/l8/o7W4Mq9XP9oVg1bemvWqj1yX3YchjWbz6wOKM56WSYHVoCeNcCp4E7RMnEqwmrq59NmDUZWRm5VJlqMQHMYTRLqA4K3tvJ2Svj5KEnmyDLRCEYdW4OOErflRiju0aUvmLTcRGNF8LRuVgqNQG+MUBtfttzkvfTT6/5ZeZtT24rVWT1qwrgoXs8KmdqRMZh+NN/6n2oz+ELLzKlI2lHvW89g6HNz6ynJp423zHwzonufoJZQKQm/3WvKW2HwQcJw3BfzLBxKdFeR4IRg3ksvuHAvOlpGBIwOlRedWJlaXR1aJidW5m8M6pGRzOF+ElidN17dc7LrGbnVws9bOoYfesdpc+/dqYiruY8dBFkvGvBxxrI1goGS7Dc7S3teQn1lJHTl81mlE3jXz1Tkpj/3RAswSJJcKpKqysMBivFka2cmHFHMtDDa7Mkc/1M+fEQwGiXUhpLMEcNZoXWqKkIX3iBrOdwpy62IEy083Mk1qNny71fkdkFxbvWzPM96oRi41NxaOoLfWHlU7JT0vPjgZmOyHsVS01PWSrjrbD8CymHeCzvrJjxzz9Ub7zHbT3oGA/NX7zq2/JQ5lNwupb/owCCeqJ+01ODpvpcX7mW1hLrnzcz345vfzbUXcdIzP6l5mXboRTuLV0QX4X1Tssw0Wy3aLHommpJ8ZvzxXQEmAfGhIqylXuRUJOzE+GR5+X2dX9Ea9RUMr6wIP3TxdCf8vOZwsHs6CBMeWJlNP9SSl89sujVfg4H7iYNg4HKSaNEAw32khI3tBdYXHt/eeb1WJHgTMBxnhl5XQ/q8WnYCuvUe6qskjprfr0EnidtYP1z6zAZaym7WKk566uFJeMsOcxI9lb71ou1X9JzamMP/4PsgDK7lwnbHSvFTrE0D/AriDsVg5F6mhZ/OvL37HZ2fZUaS28Xu6RLLcpsE75762JH7jKyO4rRV3AdamGUWD+8/ZS2Di/fTAhhK9MV618zhouHbH3ZOtSMr83H/evdMiDtKkpkhBrHDysRqbP3R9uJUEM+MyDgJ5rzWs/2speamNw14YYTVktzujLGax5ne2Dl/xP1q90qS3d275lgtK7M36oUuP21trZp62lhP/cSCZXyu1T7/Q67ntLvPqJj7sb7nz7vcs2Z1Q9DVlAT2nnRQLFsOB0XNTgmDHWG0Zavn812lr6wANTvlc077jJmo5TEeWTEz/6ih9LJeksD50azeveto93n/aV+YvReh3fejqsiT4mWqqMGO9LDm/7+fYfYsmNs9sh48pXH6wXYU/mkuy25FXJcXj1pa3oCrGEHDytxnxPL4rrn1g1wzE7k83s5sptPqnvdTjtezyoiz5H7BTwKGHSOBU5HoYuuTEI92h21+6dXa3kHW+9/zixE4H2xHE4I/x9jcfQB72qnWc58PzSgJjug5fcxJTJbb1QU902GzXt3Sw+Pe+FP27DtW1gP3As1PeUvJ8PXxTv3665f//O2/AQAA//+lslh9")
+	unpacked := packer.MustUnpack("eJyMVV+Po74Vfe/H2A/wK3+G1VLp9xBnBmMW2IbM2NgvFbYzhsROUBMgUPW7VyZMZqYdVfsQRQJ8zz3nnnv8r2//MLtL9ddK7Y6XP171bnf5YzT629++ockJ//78ez/0JDU3eKRkUL975v7bnPboKdG0LCYE9YRg3nPDWubjkZGNkiQ4sBKpwlw1KzdnFOtebsGekgfFIDYVCTSCbi/8jRIediTUHfOzn2gERpjwguLixLYgrUhSc/Ok8MuhQ9F7DVmCAy0Lbb+rykwxo89sCxw+gj33AlMR6QrzoiSsNYpzLeOi5UZO9ntabixObd9zEzoozl0Rg14cC83WoNltAeQQa7l++MlJ1FEiNSe4k4+nn2gNLtwr9K9m1bAbt2at2gP3ZcdhWLP5m9UexXkvy2TPtqBnDXAq+KJomTgVYTX1iyldg5GVkVuViRYj0BxGk4R6j+C1rbwXJfxilCR3ZJloBKOOrUFHidtyIxT36I0XTFpuorEieFo3K4VGoFMjVOrLlpuil3522T0qLz22rVid1L0njLfb55NCpnZkDKZfzY/+U28Gn2mZOxXJOur96BkMfW6uPSXFlHq3macjWniCWkKlJPyx9FS0wuC9hOG4286zcCjRXUWCI4JFL73gzL3oYD0iYLSvvOjIyszq6tAyObKyeGVQj4zkDveTwOqcxJeBlsUpNUUtYRSm3nsdce+jaDnBvSw3iplw/Ig1Y8egpt6lZt7LjFURV3MfO7+a1ZTF2a0GZC2HL7Yvp1rPXqpRDFxqri0dwT9ZeVCyzK1HDPeRkgaPFWHBV9w+6rnMpmUN6Li/efNqK0YwCIMnRgIHweg4/8ey5XBQMk4CFBc9glb3jRIxbvjsj4vebZcdgZ/mpKSHG+Fph20fLMeB+cBU5Kq/1vD9rIByQOqk0DpTFQkmCaMzj8L5ewQLLbx8rMjs09nHHIZ7WhYt9x5mL97PQHx41xlPqQ9G7smREndKG5DI9cy55nHeo9jy3rzp3osGjIzcZ7Wcc5TwgaaeNhXJawl1z49ZZ/X87z6/5qg74Rc1h4Pd0UGYcM/KfPq1cOWzL92ar8HA/cRBMHC55dnc5it8UEsvsPO+n128eqlI8CpgOMrHk8qeV0P2uFq4uPUO6ou0vdv3a9BJ4jY2C2dfxvlAS9nN/o+Tnnp4Et5tfzmJHkrf5tDmO3rMbM1h8c7dr4tWe2FwPWfmCDpWik+10gb4FcTdTcdcCz9TNiPfso7Oz3IjyfVsd/RWCx8QnD0356mE+sJI6MrVTSurozhuFPeBFiZyKhJ299w/5i2Dt9ynW2Ao0WebW7b3RcPXez2r1wSmtWpHVhbj7nnJS4g7SpKzrcEgdliZWI2t5ywXp4J4RHGi572wuDav/byl5qrTBjwxwmpJrs6tJ2Y9plM75/e631FsM/VlyYu5VsvK/JV6ocuPmw9ew9MHL9j8nnu1z/8H6/HmRzSC7czHZp6PO7m251ZXBF1NSWDvyPtuU/OihMGOMNp6q+fzPaUvbAtqdixmTPuMmajlMR6Xfb73UHp5L0kwZ9eCfWDkWu+2YBIQ7yvCWmbvxDkfDqoiD4qXmaIGO9LDmv9/PoMYrG6FvZOCz/no1rso/BLLercirsu3915a3oCLGEHDysJnxPrxTfOsQ0+FZiZyebyZvZlNqwX3A8bzSeXEuWE/4QcBw85mZEWis+1PQjzaHbb40qu1vX9E845v8+rd29GE4Oca6ZID2NNOtZ553jWjJDigx+w+JzFZ367O6JEO6Xp1zfbgTfsvvWffsbIeuBdofixaSobv93fqzz+//fsv/wkAAP//30VSPA==")
 	raw, ok := unpacked["_meta/agent.fleet.yml"]
 	if !ok {
 		// ensure we have something loaded.
